# rosehost

./: Cargo.toml  README.md
src/: file.rs  html.rs  main.rs  serverresource.rs
src/www/: index.html
src/www/400/: index.html
src/www/404/: index.html
src/www/error/: 400.html  404.html  418.html  500.html
src/www/gamble/: index.html
src/www/gamble/the-fool/: index.html
src/www/media/: bingle-dong-bingle.webm  catshot-roulette.webm
src/www/silly/: index.html
