[package]
name = "rosehost"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/rosewareorg/webhost"
authors = ["Webbop <webbop@pm.me>", "Elisey Dudin <dudinelisey630@gmail.com>"]

[dependencies]
httparse = "1.10.0"
log = "0.4.25"
ekero = "0.1.0"
clang_log = "2.0.5"

[dev-dependencies]
clang_log = "2.0.5"
